--- a/src/assets/style/common.less
+++ b/src/assets/style/common.less
@@ -45,4 +45,18 @@ img {
     color: #2980b9 !important;
 
 }
-
+.el-message-box{
+    background-color: #2c3e50;
+    border: none;
+    .el-message-box__title {
+        color: #2980b9;
+        font-weight: 700;
+    }
+    .el-message-box__message{
+        color: #2980b9;
+    }
+    .el-button {
+        background-color: transparent;
+        color: #2980b9;
+    }
+}
