5.last edit and pinia token

--- a/src/assets/style/common.less
+++ b/src/assets/style/common.less
@@ -35,16 +35,21 @@ img {
     background-color: #2c3e50 !important;
     color: #2980b9 !important;
 }
+
+.el-pagination.is-background .btn-next, .el-pagination.is-background .btn-prev, .el-pagination.is-background .el-pager li {
+    background-color: #2c3e50 !important;
+}
 .el-pager {
     .number {
 
         background-color: #2c3e50 !important;
     }
 }
+
 .el-pager li.is-active {
     color: #2980b9 !important;
-
 }
+
 .el-message-box{
     background-color: #2c3e50;
     border: none;
@@ -57,6 +62,12 @@ img {
     }
     .el-button {
         background-color: transparent;
+        color: #2980b9;
+    }
+}
+.el-dropdown-menu{
+    background-color: #2c3e50 !important;
+    li {
         color: #2980b9;
     }
 }
